Fixed Telegram errors

--- a/docker-zabbix/Jenkinsfile
+++ b/docker-zabbix/Jenkinsfile
@@ -18,38 +18,38 @@ pipeline {
             }
         }
 
-        stage('Check Changes in DOCKER_COMPOSE_DIR') {
-            steps {
-                script {
-                    // Initial checkout 
-                    def scmVars = checkout([
-                        $class: 'GitSCM',
-                        branches: [[name: '*/master']],
-                        userRemoteConfigs: [[url: 'https://github.com/nazmang/docker.git']],
-                        extensions: [
-                            [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "${env.DOCKER_COMPOSE_DIR}/"]]]
-                        ]
-                    ])
+        // stage('Check Changes in DOCKER_COMPOSE_DIR') {
+        //     steps {
+        //         script {
+        //             // Initial checkout 
+        //             def scmVars = checkout([
+        //                 $class: 'GitSCM',
+        //                 branches: [[name: '*/master']],
+        //                 userRemoteConfigs: [[url: 'https://github.com/nazmang/docker.git']],
+        //                 extensions: [
+        //                     [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "${env.DOCKER_COMPOSE_DIR}/"]]]
+        //                 ]
+        //             ])
 
-                    // Recieve last and previous commits info 
-                    def currentCommit = scmVars.GIT_COMMIT
-                    def previousCommit = scmVars.GIT_PREVIOUS_SUCCESSFUL_COMMIT ?: 'HEAD^'
+        //             // Recieve last and previous commits info 
+        //             def currentCommit = scmVars.GIT_COMMIT
+        //             def previousCommit = scmVars.GIT_PREVIOUS_SUCCESSFUL_COMMIT ?: 'HEAD^'
 
-                    // Check changes between commits 
-                    def changedFiles = sh(script: "git diff --name-only ${previousCommit} ${currentCommit}", returnStdout: true).trim().split('\n')
-                    def relevantChanges = changedFiles.any { it.startsWith("${env.DOCKER_COMPOSE_DIR}/") }
+        //             // Check changes between commits 
+        //             def changedFiles = sh(script: "git diff --name-only ${previousCommit} ${currentCommit}", returnStdout: true).trim().split('\n')
+        //             def relevantChanges = changedFiles.any { it.startsWith("${env.DOCKER_COMPOSE_DIR}/") }
 
-                    if (!relevantChanges) {
-                        echo "No changes detected in ${env.DOCKER_COMPOSE_DIR}. Aborting pipeline."
-                        currentBuild.result = 'ABORTED'
-                        error("No relevant changes detected")
-                    } else {
-                        echo "Changes detected in ${env.DOCKER_COMPOSE_DIR}. Proceeding with pipeline."
-                    }
-                }
-            }
-        }
-        
+        //             if (!relevantChanges) {
+        //                 echo "No changes detected in ${env.DOCKER_COMPOSE_DIR}. Aborting pipeline."
+        //                 currentBuild.result = 'ABORTED'
+        //                 error("No relevant changes detected")
+        //             } else {
+        //                 echo "Changes detected in ${env.DOCKER_COMPOSE_DIR}. Proceeding with pipeline."
+        //             }
+        //         }
+        //     }
+        // }
+
         stage('Create Files') {
             when {
                 changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
@@ -118,25 +118,25 @@ pipeline {
                 """
                 
                 def message = "✅ *Jenkins Deploy Success*\\n" +
-                              "Job: ${env.JOB_NAME}\\n" +
-                              "Build: #${env.BUILD_NUMBER}\\n" +
-                              "Stack: ${env.DOCKER_STACK_NAME}\\n" +
-                              "URL: ${env.BUILD_URL}"
+                          "Job: ${env.JOB_NAME.replaceAll('-', '\\\\-')}\\n" +  // Экранируем '-'
+                          "Build: #${env.BUILD_NUMBER}\\n" +
+                          "Stack: ${env.DOCKER_STACK_NAME}\\n" +
+                          "URL: ${env.BUILD_URL.replaceAll('-', '\\\\-')}"     // Экранируем '-' в URL
                 sh """
                     curl -s -X POST https://api.telegram.org/bot${env.TELEGRAM_BOT_TOKEN}/sendMessage \
                     -d chat_id=${env.TELEGRAM_CHAT_ID} \
                     -d text="${message}" \
                     -d parse_mode=MarkdownV2
-                """            
+                """
             }
         }
         failure {
             script {
                 def message = "❌ *Jenkins Deploy Failed*\\n" +
-                              "Job: ${env.JOB_NAME}\\n" +
-                              "Build: #${env.BUILD_NUMBER}\\n" +
-                              "Stack: ${env.DOCKER_STACK_NAME}\\n" +
-                              "URL: ${env.BUILD_URL}"
+                            "Job: ${env.JOB_NAME.replaceAll('-', '\\\\-')}\\n" +
+                            "Build: #${env.BUILD_NUMBER}\\n" +
+                            "Stack: ${env.DOCKER_STACK_NAME}\\n" +
+                            "URL: ${env.BUILD_URL.replaceAll('-', '\\\\-')}"
                 sh """
                     curl -s -X POST https://api.telegram.org/bot${env.TELEGRAM_BOT_TOKEN}/sendMessage \
                     -d chat_id=${env.TELEGRAM_CHAT_ID} \
