--- a/docker-jenkins/Jenkinsfile
+++ b/docker-jenkins/Jenkinsfile
@@ -16,12 +16,7 @@ pipeline {
         VIRTUAL_PORT = 8080
         LETSENCRYPT_EMAIL = 'admin@example.com'
     }
-
    
-//    options {
-//        skipDefaultCheckout()
-//    }
-
     stages {
         stage('Checkout') {
             steps {
@@ -30,39 +25,10 @@ pipeline {
             }
         }
         
-        stage('Check Changes in DOCKER_COMPOSE_DIR') {
-            steps {
-                script {
-                    // Initial checkout 
-                    def scmVars = checkout([
-                        $class: 'GitSCM',
-                        branches: [[name: '*/master']],
-                        userRemoteConfigs: [[url: 'https://github.com/nazmang/docker.git']],
-                        extensions: [
-                            [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "${env.DOCKER_COMPOSE_DIR}/"]]]
-                        ]
-                    ])
-
-                    // Recieve last and previous commits info 
-                    def currentCommit = scmVars.GIT_COMMIT
-                    def previousCommit = scmVars.GIT_PREVIOUS_SUCCESSFUL_COMMIT ?: 'HEAD^'
-
-                    // Check changes between commits 
-                    def changedFiles = sh(script: "git diff --name-only ${previousCommit} ${currentCommit}", returnStdout: true).trim().split('\n')
-                    def relevantChanges = changedFiles.any { it.startsWith("${env.DOCKER_COMPOSE_DIR}/") }
-
-                    if (!relevantChanges) {
-                        echo "No changes detected in ${env.DOCKER_COMPOSE_DIR}. Aborting pipeline."
-                        currentBuild.result = 'ABORTED'
-                        error("No relevant changes detected")
-                    } else {
-                        echo "Changes detected in ${env.DOCKER_COMPOSE_DIR}. Proceeding with pipeline."
-                    }
-                }
-            }
-        }
-
         stage('Create Files') {
+            when {
+                changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
+            }
             steps {
                 script {
                     def composeDir = "${env.WORKSPACE}/${env.DOCKER_COMPOSE_DIR}"
@@ -88,6 +54,9 @@ pipeline {
         }
 
         stage('Deploy stack') {
+            when {
+                changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
+            }
             steps {
                 script {
                     dir("${env.DOCKER_COMPOSE_DIR}") {
@@ -101,6 +70,37 @@ pipeline {
     post {
         always {
             cleanWs()
+        }
+        success {
+            script{
+                            
+                def message = "<b>✅ Jenkins Deploy Success</b>\n" +
+                          "Job: ${env.JOB_NAME}\n" +
+                          "Build: #${env.BUILD_NUMBER}\n" +
+                          "Stack: ${env.DOCKER_STACK_NAME}\n" +
+                          "URL: <a href='${env.BUILD_URL}'>Link</a>"
+                sh """
+                    curl -s -X POST https://api.telegram.org/bot${env.TELEGRAM_BOT_TOKEN}/sendMessage \
+                    -d chat_id=${env.TELEGRAM_CHAT_ID} \
+                    -d text="${message}" \
+                    -d parse_mode=HTML
+                """
+            }
+        }
+        failure {
+            script {
+                def message = "<b>❌ Jenkins Deploy Failed</b>\n" +
+                          "Job: ${env.JOB_NAME}\n" +
+                          "Build: #${env.BUILD_NUMBER}\n" +
+                          "Stack: ${env.DOCKER_STACK_NAME}\n" +
+                          "URL: <a href='${env.BUILD_URL}'>Link</a>"
+                sh """
+                    curl -s -X POST https://api.telegram.org/bot${env.TELEGRAM_BOT_TOKEN}/sendMessage \
+                    -d chat_id=${env.TELEGRAM_CHAT_ID} \
+                    -d text="${message}" \
+                    -d parse_mode=HTML
+                """
+            }
         }
     }
 }
