--- a/docker-jenkins/Jenkinsfile
+++ b/docker-jenkins/Jenkinsfile
@@ -18,16 +18,10 @@ pipeline {
         VIRTUAL_HOST = 'example.com'
         VIRTUAL_PORT = 8080
         LETSENCRYPT_EMAIL = 'admin@example.com'
+        DEPLOY_EXECUTED = 'false' // Flag to check 'Deploy stack' step status 
     }
    
-    stages {
-        // stage('Checkout') {
-        //     steps {
-        //         git branch: 'master',
-        //             url: 'https://github.com/nazmang/docker.git'
-        //     }
-        // }
-        
+    stages {        
         stage('Create Files') {
             when {
                 changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
@@ -64,6 +58,7 @@ pipeline {
                 script {
                     dir("${env.DOCKER_COMPOSE_DIR}") {
                         sh "make -f Makefile -e deploy-all STACK_NAME=${env.DOCKER_STACK_NAME}"
+                        env.DEPLOY_EXECUTED = 'true'
                     }
                 }
             }
@@ -75,19 +70,17 @@ pipeline {
             cleanWs()
         }
         success {
-            script{
-                            
-                def message = "<b>✅ Jenkins Deploy Success</b>\n" +
-                          "Job: ${env.JOB_NAME}\n" +
-                          "Build: #${env.BUILD_NUMBER}\n" +
-                          "Stack: ${env.DOCKER_STACK_NAME}\n" +
-                          "URL: <a href='${env.BUILD_URL}'>Link</a>"
-                sh """
-                    curl -s -X POST https://api.telegram.org/bot${env.TELEGRAM_BOT_TOKEN}/sendMessage \
-                    -d chat_id=${env.TELEGRAM_CHAT_ID} \
-                    -d text="${message}" \
-                    -d parse_mode=HTML
-                """
+            script{                            
+                if (env.DEPLOY_EXECUTED == 'true') {
+                    def message = "✅ *Jenkins Deploy Success*\n" +
+                                  "Job: ${env.JOB_NAME}\n" +
+                                  "Build: #${env.BUILD_NUMBER}\n" +
+                                  "Stack: ${env.DOCKER_STACK_NAME}\n" +
+                                  "URL: ${env.BUILD_URL}"
+                    telegram.sendMessage(env.TELEGRAM_BOT_TOKEN, env.TELEGRAM_CHAT_ID, message)
+                } else {
+                    echo "Deploy stack was not executed, skipping Telegram notification."
+                }
             }
         }
         failure {
