--- a/docker-zabbix/Jenkinsfile
+++ b/docker-zabbix/Jenkinsfile
@@ -8,48 +8,10 @@ pipeline {
         // Telegram configre
         TELEGRAM_BOT_TOKEN = credentials('telegramToken')
         TELEGRAM_CHAT_ID = credentials('telegramChatid')   
+        DEPLOY_EXECUTED = 'false' // Flag to check 'Deploy stack' step status 
     }
     
     stages {
-        stage('Checkout') {
-            steps {
-                git branch: 'master',
-                url: 'https://github.com/nazmang/docker.git'
-            }
-        }
-
-        // stage('Check Changes in DOCKER_COMPOSE_DIR') {
-        //     steps {
-        //         script {
-        //             // Initial checkout 
-        //             def scmVars = checkout([
-        //                 $class: 'GitSCM',
-        //                 branches: [[name: '*/master']],
-        //                 userRemoteConfigs: [[url: 'https://github.com/nazmang/docker.git']],
-        //                 extensions: [
-        //                     [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "${env.DOCKER_COMPOSE_DIR}/"]]]
-        //                 ]
-        //             ])
-
-        //             // Recieve last and previous commits info 
-        //             def currentCommit = scmVars.GIT_COMMIT
-        //             def previousCommit = scmVars.GIT_PREVIOUS_SUCCESSFUL_COMMIT ?: 'HEAD^'
-
-        //             // Check changes between commits 
-        //             def changedFiles = sh(script: "git diff --name-only ${previousCommit} ${currentCommit}", returnStdout: true).trim().split('\n')
-        //             def relevantChanges = changedFiles.any { it.startsWith("${env.DOCKER_COMPOSE_DIR}/") }
-
-        //             if (!relevantChanges) {
-        //                 echo "No changes detected in ${env.DOCKER_COMPOSE_DIR}. Aborting pipeline."
-        //                 currentBuild.result = 'ABORTED'
-        //                 error("No relevant changes detected")
-        //             } else {
-        //                 echo "Changes detected in ${env.DOCKER_COMPOSE_DIR}. Proceeding with pipeline."
-        //             }
-        //         }
-        //     }
-        // }
-
         stage('Create Files') {
             when {
                 changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
@@ -98,6 +60,7 @@ pipeline {
                                 docker context use ${env.DOCKER_CONTEXT}
                                 CONF_VERSION=${BUILD_NUMBER} docker stack deploy -c ${composeFile} ${env.DOCKER_STACK_NAME}
                             """ 
+                        env.DEPLOY_EXECUTED = 'true'    
                     }
                 }
             }
@@ -117,17 +80,16 @@ pipeline {
                     | xargs -I {} docker secret rm {} || true
                 """
                 
-                def message = "<b>✅ Jenkins Deploy Success</b>\n" +
-                          "Job: ${env.JOB_NAME}\n" +
-                          "Build: #${env.BUILD_NUMBER}\n" +
-                          "Stack: ${env.DOCKER_STACK_NAME}\n" +
-                          "URL: <a href='${env.BUILD_URL}'>Link</a>"
-                sh """
-                    curl -s -X POST https://api.telegram.org/bot${env.TELEGRAM_BOT_TOKEN}/sendMessage \
-                    -d chat_id=${env.TELEGRAM_CHAT_ID} \
-                    -d text="${message}" \
-                    -d parse_mode=HTML
-                """
+                if (env.DEPLOY_EXECUTED == 'true') {
+                    def message = "✅ *Jenkins Deploy Success*\n" +
+                                  "Job: ${env.JOB_NAME}\n" +
+                                  "Build: #${env.BUILD_NUMBER}\n" +
+                                  "Stack: ${env.DOCKER_STACK_NAME}\n" +
+                                  "URL: ${env.BUILD_URL}"
+                    telegram.sendMessage(env.TELEGRAM_BOT_TOKEN, env.TELEGRAM_CHAT_ID, message)
+                } else {
+                    echo "Deploy stack was not executed, skipping Telegram notification."
+                }
             }
         }
         failure {
