--- a/docker-monitoring/Jenkinsfile
+++ b/docker-monitoring/Jenkinsfile
@@ -6,32 +6,50 @@ pipeline {
         DOCKER_STACK_NAME = 'monitoring'
         DOCKER_COMPOSE_DIR = 'docker-monitoring' // Path to docker-compose.yml
         DOCKER_COMPOSE_FILE = 'docker-compose.yml' // Name of your Docker Compose file
-        ADMIN_USER = 'admin' // Default admin user for Grafana
-        ADMIN_PASSWORD = 'admin' // Default admin password for Grafana
-        // SLACK_URL = 'https://hooks.slack.com/services/TOKEN' // Slack webhook URL for Alertmanager
-        // SLACK_CHANNEL = 'general' // Slack channel for alerts
-        // SLACK_USER = 'alertmanager' // Slack username for alerts
+        GF_SECURITY_ADMIN_USER = "${params.GF_ADMIN_USER}" // Default admin user for Grafana
+        GF_SECURITY_ADMIN_PASSWORD = "${params.GF_ADMIN_PASSWORD}" // Default admin password for Grafana
+        SLACK_URL = 'https://hooks.slack.com/services/TOKEN' // Slack webhook URL for Alertmanager
+        SLACK_CHANNEL = 'general' // Slack channel for alerts
+        SLACK_USER = 'alertmanager' // Slack username for alerts
     }
 
     stages {
-        
-        stage('Deploy Monitoring Stack') {
-            when {
+        // stage('Checkout') {
+        //     steps {
+        //         git branch: 'master',
+        //         url: 'https://github.com/nazmang/docker.git'
+        //     }
+        // }
+        stage('Create Files') {
+             when {
                 changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
+             }
+            steps {
+                script {
+                    def composeDir = "${env.WORKSPACE}/${env.DOCKER_COMPOSE_DIR}"
+                    def envContent = """
+                    GF_SECURITY_ADMIN_USER=${env.ADMIN_USER}
+                    GF_SECURITY_ADMIN_PASSWORD=${env.ADMIN_PASSWORD}
+                    SLACK_URL=${env.SLACK_URL}
+                    SLACK_CHANNEL=${env.SLACK_CHANNEL}
+                    SLACK_USER=${env.SLACK_USER}
+                    """
+                    echo "Generated .env content:\n${envContent}"
+                    writeFile file: "${composeDir}/.env", text: envContent
+                }
             }
+        }
+
+        stage('Deploy Monitoring Stack') {
+             when {
+                changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
+             }
             steps {
                 dir("${env.DOCKER_COMPOSE_DIR}"){
                     // Deploy the stack using docker stack deploy
-                    sh """
-                        # Export environment variables (optional, if needed)
-                        export ADMIN_USER=${ADMIN_USER}
-                        export ADMIN_PASSWORD=${ADMIN_PASSWORD}
-                        export SLACK_URL=${SLACK_URL}
-                        export SLACK_CHANNEL=${SLACK_CHANNEL}
-                        export SLACK_USER=${SLACK_USER}
-
+                    sh """                       
                         # Deploy the stack
-                        envsubst < ${env.DOCKER_COMPOSE_FILE} | docker stack deploy -c - ${env.DOCKER_STACK_NAME}
+                        export \$(grep -v '^#' .env | xargs) && envsubst < ${env.DOCKER_COMPOSE_FILE} | docker stack deploy -c - ${env.DOCKER_STACK_NAME}
                     """
                 }
             }
