--- a/docker-monitoring/Jenkinsfile
+++ b/docker-monitoring/Jenkinsfile
@@ -4,7 +4,7 @@ def deployExecuted = false
 
 pipeline {
     agent { label 'swarm && local' } // Ensure the agent has Docker and Swarm mode enabled
-
+    
     environment {
         // Define environment variables for the stack
         DOCKER_STACK_NAME = 'monitoring'
@@ -51,7 +51,9 @@ pipeline {
                         export \$(grep -v '^#' .env | xargs) && envsubst < ${env.DOCKER_COMPOSE_FILE} | docker stack deploy -c - ${env.DOCKER_STACK_NAME}
                     """
                 }
-                deployExecuted = true
+                script {
+                    deployExecuted = true
+                }
             }
         }
     }
