--- a/docker-monitoring/docker-compose.yml
+++ b/docker-monitoring/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3.1"
+version: "3.8"
 
 services:
   grafana:
-    image: grafana/grafana:10.3.5
+    image: grafana/grafana:${GRAFANA_TAG:-latest}
     ports:
       - 3000:3000
     volumes:
@@ -21,73 +21,12 @@ services:
         reservations:
           memory: 256M
     networks:
-      - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
-
-  nodeexporter:
-    image: prom/node-exporter:v1.7.0
-    environment:
-      - NODE_ID={{.Node.ID}}
-    deploy:
-      mode: global
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-        window: 120s
-      resources:
-        limits:
-          memory: 128M
-        reservations:
-          memory: 64M
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-      - /etc/hostname:/etc/nodename
-    command:
-      - "--path.procfs=/host/proc"
-      - "--path.rootfs=/rootfs"
-      - "--path.sysfs=/host/sys"
-      - "--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)"
-      - "--no-collector.ipvs"
-    networks:
-      - monitor-net
-    ports:
-      - 9100:9100
-    labels:
-      org.label-schema.group: "monitoring"
-
-  cadvisor:
-    image: nazman/cadvisor:v0.49.1
-    command: --logtostderr=true
-    deploy:
-      mode: global
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-      resources:
-        limits:
-          memory: 128M
-        reservations:
-          memory: 64M
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:ro
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-      - /dev/disk/:/dev/disk:ro
-    networks:
-      - monitor-net
-    ports:
-      - 8080:8080
+      - monitoring_net
     labels:
       org.label-schema.group: "monitoring"
 
   prometheus:
-    image: prom/prometheus:v2.53.4
+    image: prom/prometheus:${PROM_TAG:-latest}
     container_name: prometheus
     deploy:
       mode: replicated
@@ -115,38 +54,12 @@ services:
     ports:
       - 9090:9090
     networks:
-      - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
-
-  dockerproxy:
-    image: ghcr.io/tecnativa/docker-socket-proxy:latest
-    container_name: dockerproxy
-    deploy:
-      placement:
-        constraints:
-          - "node.role==manager"
-    environment:
-      - CONTAINERS=1 # Allow access to viewing containers
-      - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
-      - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
-      - NODES=1 # Allow access to viewing nodes (necessary when using Docker Swarm)
-      - POST=0 # Disallow any POST operations (effectively read-only)
-      - SWARM=1
-      - NETWORKS=1
-      - VOLUMES=1
-    ports:
-      - 127.0.0.1:2375:2375
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
-    restart: unless-stopped
-    networks:
-      - monitor-net
+      - monitoring_net
     labels:
       org.label-schema.group: "monitoring"
 
   alertmanager:
-    image: quay.io/prometheus/alertmanager:v0.26.0
+    image: quay.io/prometheus/alertmanager:${ALERTMGR_TAG:-latest}
     command:
       - "--config.file=/etc/alertmanager/alertmanager.yml"
       - "--storage.path=/alertmanager"
@@ -167,12 +80,14 @@ services:
     ports:
       - 9093:9093
     networks:
-      - monitor-net
+      - monitoring_net
     labels:
       org.label-schema.group: "monitoring"
 
 networks:
-  monitor-net:
+  monitoring_net:
+    driver: overlay
+    attachable: true
 
 volumes:
   prometheus_data:
@@ -187,12 +102,6 @@ volumes:
       type: "none"
       o: "bind"
       device: "/data/prometheus_config"
-  influx_db:
-    driver: local
-    driver_opts:
-      type: "none"
-      o: "bind"
-      device: "/data/influx_db"
   grafana:
     driver: local
     driver_opts:
